@@ -1,49 +1,41 @@
 package com.bakdata.conquery.models.query.resultinfo;
 
-import java.util.Collections;
 import java.util.Set;
 
 import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
 import com.bakdata.conquery.models.datasets.concepts.select.Select;
-import com.bakdata.conquery.models.query.ColumnDescriptor;
 import com.bakdata.conquery.models.query.PrintSettings;
+import com.bakdata.conquery.models.query.resultinfo.printers.ResultPrinters;
 import com.bakdata.conquery.models.types.ResultType;
 import com.bakdata.conquery.models.types.SemanticType;
-import com.google.common.collect.ImmutableSet;
-import lombok.AccessLevel;
+import com.google.common.collect.Sets;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
 
 @Getter
 @EqualsAndHashCode(callSuper = true)
-@RequiredArgsConstructor
 public class SelectResultInfo extends ResultInfo {
 	@NonNull
 	private final Select select;
 	@NonNull
 	private final CQConcept cqConcept;
 
-	@Getter(AccessLevel.PACKAGE)
-	@NonNull
-	private final Set<SemanticType> additionalSemantics;
-
-	public SelectResultInfo(Select select, CQConcept cqConcept) {
-		this(select, cqConcept, Collections.emptySet());
+	public SelectResultInfo(Select select, CQConcept cqConcept, Set<SemanticType> semantics, PrintSettings settings) {
+		super(Sets.union(semantics, Set.of(new SemanticType.SelectResultT(select))), settings);
+		this.select = select;
+		this.cqConcept = cqConcept;
 	}
 
-	@Override
-	public Set<SemanticType> getSemantics() {
-		return ImmutableSet.<SemanticType>builder()
-						   .addAll(additionalSemantics)
-						   .add(new SemanticType.SelectResultT(select))
-						   .build();
-	}
 
 	@Override
 	public String getDescription() {
 		return select.getDescription();
+	}
+
+	@Override
+	public ResultPrinters.Printer getPrinter() {
+		return select.createPrinter(getSettings());
 	}
 
 	@Override
@@ -52,22 +44,11 @@ public class SelectResultInfo extends ResultInfo {
 	}
 
 	@Override
-	public ColumnDescriptor asColumnDescriptor(PrintSettings settings, UniqueNamer uniqueNamer) {
-		return ColumnDescriptor.builder()
-							   .label(uniqueNamer.getUniqueName(this))
-							   .defaultLabel(defaultColumnName(settings))
-							   .type(getType().typeInfo())
-							   .semantics(getSemantics())
-							   .description(getSelect().getDescription())
-							   .build();
-	}
+	public String userColumnName() {
 
-	@Override
-	public String userColumnName(PrintSettings printSettings) {
-
-		if (printSettings.getColumnNamer() != null) {
+		if (getSettings().getColumnNamer() != null) {
 			// override user labels if column namer is set, TODO clean this up when userConceptLabel is removed
-			return printSettings.getColumnNamer().apply(this);
+			return getSettings().getColumnNamer().apply(this);
 		}
 
 		String label = getCqConcept().getLabel();
@@ -75,16 +56,14 @@ public class SelectResultInfo extends ResultInfo {
 			return null;
 		}
 
-		return label
-			   + " "
-			   + select.getColumnName();
+		return label + " " + select.getColumnName();
 	}
 
 	@Override
-	public String defaultColumnName(PrintSettings printSettings) {
+	public String defaultColumnName() {
 
 		StringBuilder sb = new StringBuilder();
-		String cqLabel = getCqConcept().defaultLabel(printSettings.getLocale());
+		String cqLabel = getCqConcept().defaultLabel(getSettings().getLocale());
 		final String selectLabel = select.getColumnName();
 
 		if (selectLabel.equals(cqLabel)) {
@@ -107,4 +86,5 @@ public class SelectResultInfo extends ResultInfo {
 	public String toString() {
 		return "SelectResultInfo[" + select.getName() + ", " + select.getResultType() + "]";
 	}
+
 }
